Update to API version 1.0.2 (#98)
* Update to API version 1.0.2

* Bump tool version to 1.0.2
