# server/openapi_server/controllers/tool_controller.py
@@ -13,15 +13,15 @@ def get_tool():  # noqa: E501
     """
     tool = Tool(
         name="date-annotator-example",
-        version="1.0.1",
+        version="1.0.2",
         license=License.APACHE_2_0,
         repository="github:nlpsandbox/date-annotator-example",
         description="Example implementation of the NLP Sandbox Date Annotator",
         author="The NLP Sandbox Team",
         author_email="thomas.schaffter@sagebionetworks.org",
         url="https://github.com/nlpsandbox/date-annotator-example",
-        tool_type="nlpsandbox:date-annotator",
-        tool_api_version="1.0.1"
+        type="nlpsandbox:date-annotator",
+        api_version="1.0.2"
     )
     return tool, 200
 
